--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   /* Text colors */
   --text-color-header: 50, 50, 50; /* rgb(50, 50, 50) */
   --text-color-primary: 80, 80, 80; /* rgb(80, 80, 80) */
+  --text-color-secondary: 200, 200, 200; /* rgb(250, 250, 250) */
 
   /* Border color */
   --border-color-primary: 220, 220, 220; /* rgb(220, 220, 220) */
@@ -31,6 +32,7 @@
   /* Text colors */
   --text-color-header: 210, 215, 220; /* rgb(210, 215, 220) */
   --text-color-primary: 200, 200, 200; /* rgb(250, 250, 250) */
+  --text-color-secondary: 80, 80, 80;
 
   /* Border color */
   --border-color-primary: 0, 0, 0; /* rgb(180, 220, 220) */
